[package]
name = "inngest"
version = "0.0.1"
authors = ["Darwin Wu <darwin67@users.noreply.github.com>"]
edition = "2021"
description = "Inngest Rusk SDK"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"

[dev-dependencies]
axum = "0.6.20"
