[package]
name = "inngest"
version = "0.0.1"
authors = ["Darwin Wu <darwin67@users.noreply.github.com>"]
edition = "2021"
description = "Inngest Rusk SDK"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.29", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1.4"
typetag = "0.2.13"
inngest_macros = { path = "../macros" }
inventory = "0.3.12"
