[package]
name = "inngest"
version = "0.0.1"
authors = ["Inngest Engineering <eng@inngest.com>"]
edition = "2021"
description = "Inngest Rusk SDK"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.29", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
futures = "0.3"
regex = "1.11"

# used for step encoding in SDK
sha1 = "0.10"
base16 = "0.2"
url = "2.5"
sha2 = "0.10"
hmac = "0.12"
dotenv = "0.15.0"
